scenario-3/dumps/cluster-0/02-istio-config/serviceentry.xcp-multicluster.global-gwinternal-backend-backend-c1-svc-cluster-local.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  annotations:
    xcp.tetrate.io/contentHash: ebbdcc02f71fef9e12ef110bd458eb69
    xcp.tetrate.io/service: backend.backend-c1.svc.cluster.local
    xcp.tetrate.io/serviceNamespace: backend-c1
  creationTimestamp: "2026-06-01T10:50:05Z"
  generation: 1
  labels:
    istio.io/rev: global
  managedFields:
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:addresses: {}
    manager: pilot-discovery
    operation: Update
    subresource: status
    time: "2026-06-01T10:50:05Z"
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:xcp.tetrate.io/contentHash: {}
          f:xcp.tetrate.io/service: {}
          f:xcp.tetrate.io/serviceNamespace: {}
        f:labels:
          .: {}
          f:istio.io/rev: {}
      f:spec:
        .: {}
        f:endpoints: {}
        f:exportTo: {}
        f:hosts: {}
        f:location: {}
        f:ports:
          .: {}
          k:{"name":"http"}:
            .: {}
            f:name: {}
            f:number: {}
            f:protocol: {}
        f:resolution: {}
    manager: xcpd
    operation: Update
    time: "2026-06-01T10:50:05Z"
  name: global-gwinternal-backend-backend-c1-svc-cluster-local
  namespace: xcp-multicluster
  resourceVersion: "2088700"
  uid: 089620b5-a3ea-4d10-a634-1fda79165ac1
spec:
  endpoints:
  - address: 172.18.255.176
    labels:
      security.istio.io/tlsMode: istio
      xcp.tetrate.io/cluster: cluster-1
    locality: us-east1/us-east1-B/subzone-x
    network: nw-cluster-1
    ports:
      http: 15443
  exportTo:
  - '*'
  hosts:
  - backend.backend-c1.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - name: http
    number: 80
    protocol: HTTP
  resolution: STATIC
status:
  addresses:
  - host: backend.backend-c1.svc.cluster.local
    value: 240.240.0.18
  - host: backend.backend-c1.svc.cluster.local
    value: 2001:2::12
